2007-06-14  J. Tang  <jtang@tresys.com>

	* SETools can now compile against GTK+ 2.4.  Nonetheless, GTK+ 2.8
	is still the recommended toolkit.

2007-06-13  J. Tang  <jtang@tresys.com>

	* libseaudit/src/log.c (seaudit_log_clear): Added ability to clear
	a log of its messages.

2007-06-12  J. Tang  <jtang@tresys.com>

	* SETools now requires libsqlite3, version 3.2.0 or greater.  It
	used to ship with its own copy of sqlite3; that is no longer the
	case.

2007-06-11  M. Goldman  <mgoldman@tresys.com>
	* Updated swig interface to properly expose av and te rule
	  vector accessor functions.

2007-06-08  J. Mowery  <jmowery@tresys.com>

	* Fixed an error in libpoldiff where 
	  poldiff_terule_get_modified_default() was returning the
	  original default; it now correctly returns the modified
	  default type.

2007-06-08  M. Goldman <mgoldman@tresys.com>
	
	* updated sediffx diffs so that the subrules for avrules and
	  terules are broken out into allow, neverallow, auditallow,
	  dontaudit type_member, type_change, and type_transition rules

2007-06-04  J. Tang  <jtang@tresys.com>

	* added convert functions to apol_context_t and
	apol_mls_range_t; added constructors
	apol_mls_range_create_from_string() and
	apol_mls_range_create_from_literal().

2007-05-31  J. Tang  <jtang@tresys.com>

	* libapol/src/util.c (apol_str_to_objclass): Added this function,
	as the complement to apol_objclass_to_str().

	* libapol/src/mls_level.c (apol_mls_level_is_literal),
	  libapol/src/mls_range.c (apol_mls_range_is_literal): Added
	  ability to query if level/range is literal.  This is needed when
	  printing an apol_context_t containing a literal level.

	* libapol: split mls-query.h into mls-query.h, mls_level.h, and
	mls_range.h.  This file was much too large.

2007-05-30  J. Tang  <jtang@tresys.com>

	* libapol/src/mls-query.c (apol_mls_level_create_from_literal)
	(apol_mls_level_convert): The apol_mls_level_t object can now be
	created without relying upon a policy.  Call