@@ -17,7 +17,7 @@ Requires: setools-libs = %{version} setools-gui = %{version} setools-console = %
 
 %define libqpol_ver 1.3
 %define libapol_ver 4.1
-%define libpoldiff_ver 1.2
+%define libpoldiff_ver 1.3
 %define libsefs_ver 4.0
 %define libseaudit_ver 4.2
 
